welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: not found: value i
freq(i)=golomb(i)
     ^