welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var freq = new Array[Int](num)


if (num==1) return 1




freq(i)=golomb(i)
	
	


}
